ajout d'une barre de recherche geographique au dessus de la map

--- a/home.html
+++ b/home.html
@@ -188,7 +188,21 @@ desired effect
 	      <h4 class="modal-title"> Selection </h4>
 	    </div>
 	    <div class="modal-body">
-	      <div id="map-frame" class="map"></div>
+	      <div id="map-content">
+		<form id="GeoSearch" class="sidebar-form">
+		  <div class="input-group">
+		    <input type="text" name="q" class="form-control"
+			   placeholder="Chercher..." id="GeoSearchValue">
+		    <span class="input-group-btn">
+                      <button  type="submit" name="search"
+                      id="search-btn" class="btn
+                      btn-flat"><i class="fa fa-search"></i>
+                      </button>
+		    </span>
+		  </div>
+		</form>
+		<div id="map-frame" class="map"></div>
+	      </div>
 	      <div id="3d-content">			
 		<img id="img" style="display: none;"> </img>
 		<div id="frame"  style="width: 100%;">  </div>
