--- a/pages/iframe.html
+++ b/pages/iframe.html
@@ -19,7 +19,9 @@
     <script src="../js/dat.gui.min.js"></script>
     <script src="../js/three.min.js"></script>
     <script src="../js/stats.min.js"></script>   
-    <script src="../js/main.js"></script>   
+    <script src="../js/CSS2DRenderer.js"></script>    
     <script src="../js/Detector.js"></script>
+    <script src="../js/main.js"></script>
+    
   </body>  
 </html>
