--- a/pages/iframe.html
+++ b/pages/iframe.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    
+    <script src="../js/jquery.js"></script>    
     <script src="../js/dat.gui.min.js"></script>
     <script src="../js/three.min.js"></script>
     <script src="../js/stats.min.js"></script>   
