--- a/pages/iframe.html
+++ b/pages/iframe.html
@@ -3,7 +3,12 @@
   <head>
     <title> Test de Three.js </title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width,
+				   user-scalable=no,
+				   minimum-scale=1.0,
+				   maximum-scale=1.0">
+    <link rel="stylesheet" href="bootstrap/ionslider/ion.rangeSlider.css">
+    <link rel="stylesheet" href="bootstrap/css/slider.css">
     <style>
       body {
       font-family: Monospace;
