--- a/pages/iframe.html
+++ b/pages/iframe.html
@@ -26,6 +26,7 @@
     <script src="../js/stats.min.js"></script>   
     <script src="../js/Detector.js"></script>
     <script src="../js/CSS2DRenderer.js"></script>
+    <script src="../js/CombinedCamera.js"></script>
     <script src="../js/main.js"></script>   
   </body>  
 </html>
