--- a/pages/iframe.html
+++ b/pages/iframe.html
@@ -27,6 +27,7 @@
     <script src="../js/Detector.js"></script>
     <script src="../js/CSS2DRenderer.js"></script>
     <script src="../js/CombinedCamera.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="../js/main.js"></script>   
   </body>  
 </html>
