--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ desired effect
 
                     <div class="col-md-5">
 
-                        <div class="box">
+                        <div class="box" id="boxMol">
                             <div class="box-header with-border">
                                 <i class="fa fa-flask"></i>
                                 <h3 class="box-title" id="titreMol"></h3>
