ajout de metabolite sur le graphique de puit

--- a/index.html
+++ b/index.html
@@ -251,7 +251,8 @@ desired effect
 				Les données représentées correspondent à la moyenne des concentrations du pesticide recherché qui ont été mesurées au cours de l’année sélectionnée au niveau de la station sélectionnée. Deux types de mesures sont prises en compte dans le calcul de la somme des concentrations du pesticide : les analyses quantifiées et celles non quantifiées. Les concentrations correspondent à la concentration mesurée dans l’échantillon dans le cas d’une analyse quantifiée. Dans le cas d’une analyse non quantifiée, la concentration attribuée à l’échantillon correspond à la moitié de la valeur constituant la limite de quantification de l’appareil de mesure, que le pesticide soit détecté ou non.
 			      </p>
 			      <p>
-				<img src="pages/texture/img.jpg"/>
+				<img src="pages/texture/img.jpg"
+				style="width: 15% align:center;"/>
                             </div>
                             <!-- /.box-body -->
                         </div>
@@ -284,7 +285,17 @@ desired effect
                                 </div>				
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <div id="chart_detection"></div>
+                                      <div id="chart_detection"></div>
+				       <div id="info_pestMore"
+					    style="margin:
+					    auto;max-width:
+					    600px;padding: 10px 10px
+					    10px
+					    10px;background-color:
+					    #eee;text-align:
+					    center;margin-top:
+					    10px;font-size: 15px; visibility:hidden;">
+                                       </div>
                                     </div>
                                 </div>
 
@@ -321,7 +332,9 @@ desired effect
 
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <div id="chart_molecule"></div>
+                                      <div id="chart_molecule"></div>
+				      <div id="info_molecule" style="margin: auto;max-width: 600px;padding: 10px 10px 10px 10px;background-color: #eee;text-align: center;margin-top: 10px;font-size: 15px;">
+					Cliquez sur un puit pour afficher ses informations 
                                     </div>
                                 </div>
 
