--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ desired effect
                         <div class="box">
                             <div class="box-header with-border">
                                 <i class="fa fa-cube"></i><h3 class="box-title">Visualisateur 3D</h3>
-                                <div class="box-tools pull-right">
+                                <div class="box-tools pull-right">
                                     <!--<button type="button" class="btn btn-box-tool" data-widget="collapse">
                                         <i class="fa fa-minus"></i>
                                     </button>-->
@@ -229,6 +229,10 @@ desired effect
                             <div class="box-footer">
                                 <div style="padding:0px 50px" id="rangeDiv">
                                 </div>
+				<img id="legende" src="pages/texture/legende.png"
+				style="width: 30%; height: 30%;
+				     margin-left: auto; margin-right:
+				auto; display: none;"/>
 
                             </div>
                             <!-- /.box-footer -->
@@ -294,7 +298,8 @@ desired effect
 					    10px;background-color:
 					    #eee;text-align:
 					    center;margin-top:
-					    10px;font-size: 15px; visibility:hidden;">
+					    10px;font-size: 15px;
+					    display: none;">
                                        </div>
                                     </div>
                                 </div>
@@ -308,7 +313,7 @@ desired effect
                         <div class="box">
                             <div class="box-header with-border">
                                 <i class="fa fa-map-pin"></i>
-                                <h3 class="box-title">Informations sur le puit sélectionné</h3>
+                                <h3 class="box-title">Informations sur le puits sélectionné</h3>
                                 <div class="box-tools pull-right">
                                     <!--<button type="button" class="btn btn-box-tool" data-widget="collapse">
                                         <i class="fa fa-minus"></i>
@@ -334,7 +339,7 @@ desired effect
                                     <div class="col-md-12">
                                       <div id="chart_molecule"></div>
 				      <div id="info_molecule" style="margin: auto;max-width: 600px;padding: 10px 10px 10px 10px;background-color: #eee;text-align: center;margin-top: 10px;font-size: 15px;">
-					Cliquez sur un puit pour afficher ses informations 
+					Cliquez sur un puits pour afficher ses informations 
                                     </div>
                                 </div>
 
